fixed the timeline from overflowing the container and also adjusted the look of the timeline to be slimmer and more professional.

--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,10 @@ body {
 
 /* Hide scrollbar by default */
 ::-webkit-scrollbar {
-    width: 0;
-    height: 0;
+    display: none;
 }
 
-/* Make scrollbar visible when in use */
-::-webkit-scrollbar {
-    visibility: hidden;
-}
+
 
 
 /* Make scrollbar hidden again when not in use */
@@ -126,7 +122,7 @@ body::-webkit-scrollbar-thumb:window-inactive {
 
 
 .modern-button {
-    font-size: 1.5vmax; /* Adjust font size as needed */
+    font-size: 1.4vmax; /* Adjust font size as needed */
     color: white;
     background-color: transparent;
     border: 2px solid white; /* White border */
@@ -134,7 +130,6 @@ body::-webkit-scrollbar-thumb:window-inactive {
     cursor: none;
     transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
     margin: 4vmax;
-    margin-bottom: 5vmax;
     padding: 1vmax 1.5vmax; /* Responsive padding based on font size */
     
 }
